--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,7 @@ layout: default
     {{ content }}
 
     {% if page.next.url %}
-      <a class="link-to-post" href="{{ page.next.url }}">
+      <a class="link-to-post" href="{{ page.next.url | prepend: site.baseurl }}">
         <span class="link-to-post__next">&#10535; &nbsp;Next post</span>
         <span class="link-to-post__title">{{ page.next.title }}</span>
       </a>
@@ -28,7 +28,7 @@ layout: default
     {% if page.previous.url %}
       <a class="link-to-post" href="{{ page.previous.url | prepend: site.baseurl }}">
         <span class="link-to-post__prev">&#10535; &nbsp;Previous post</span>
-        <span class="link-to-post__title">{{ page.previous.title | prepend: site.baseurl }}</span>
+        <span class="link-to-post__title">{{ page.previous.title }}</span>
       </a>
     {% endif %}
 
