--- a/assets/_sass/_base.scss
+++ b/assets/_sass/_base.scss
@@ -281,3 +281,10 @@ a img {
 .post-title {
     text-align: center;
 }
+
+.category {
+    color: #aaaaaa;
+    font-style: italic;
+    font-size: 14px;
+    margin-left: 8px;
+}
