--- a/assets/_sass/_base.scss
+++ b/assets/_sass/_base.scss
@@ -28,6 +28,9 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Roboto Condensed', sans-serif;
   color: #666;
   font-weight: bold;
+  margin-top: 1.2em;
+  margin-bottom: 0.6em;
+  line-height: 1.35;
   a:link, a:hover, a:focus, a:visited { color: #333; text-decoration: none; }
   a:hover { text-decoration: underline; }
 }
@@ -76,6 +79,12 @@ textarea {
 *:before,
 *:after { box-sizing: border-box; }
 
+/* 统一上标和下标 */
+sub, sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+}
 
 /*
 * Code Style
@@ -91,11 +100,11 @@ pre {
     overflow: auto;
   }
 }
-
 code,
 pre {
   font-family: "Menlo", 'Andale Mono', 'Consolas', monospace;
   font-size: .9em;
+  color: #2aa1ae;
   line-height: 1.3;
   padding: 0.1em 0.2em;
   background-color: rgba(0,0,0,0.04);
@@ -141,13 +150,16 @@ th,
 td {
   text-align: left;
   padding: .313em .625em;
-  border: 1px solid #efefef;
+  border: 1px solid #ddd;
 }
 table caption {
   padding: .3em;
   border: 1px solid #ddd;
 }
 
+em {
+  color: #678;
+}
 
 /*
 * Blockquote
