--- a/assets/_sass/_base.scss
+++ b/assets/_sass/_base.scss
@@ -11,7 +11,7 @@
 }
 
 body {
-  font: normal 17px/1.5 微软雅黑, 'Karla', sans-serif, 'PT Serif', "Helvetica Neue", "Helvetica", Arial, sans-serif;
+  font: normal 17px/1.5 "ComputerModern", Georgia, Palatino, "Century Schoolbook L", "Times New Roman", 微软雅黑, 'Karla', sans-serif, 'PT Serif', "Helvetica Neue", "Helvetica", Arial, sans-serif;
   width: 100%;
   height: 100%;
   background: #fdfdfd;
