--- a/assets/_sass/_layout.scss
+++ b/assets/_sass/_layout.scss
@@ -368,6 +368,12 @@ article.index-page {
   line-height: 1.5em;
 }
 
+.footnotes {
+  font-size: 14px;
+  font-family: "ComputerModern", Georgia, Palatino, "Century Schoolbook L", "Times New Roman", Times, serif;
+  margin-left: -20px;
+}
+
 
 
 /*
