--- a/assets/_sass/_base.scss
+++ b/assets/_sass/_base.scss
@@ -101,7 +101,6 @@ pre {
     overflow: auto;
   }
 }
-code,
 pre {
   font-family: "Menlo", 'Andale Mono', 'Consolas', monospace;
   font-size: .9em;
@@ -111,6 +110,15 @@ pre {
   background-color: rgba(0,0,0,0.04);
   border-radius: 3px;
   -webkit-font-smoothing: auto;
+}
+
+code {
+  font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
+  border-radius: 1px;
+  background-color: rgba(0,0,0,0.04);
+  color: #ce537a;
+  font-size: 85%;
+  padding: 2px 4px;
 }
 
 kbd {
@@ -167,7 +175,7 @@ em {
 * ========================================================================== */
 blockquote {
   border: 1px solid #ddd;
-  padding: 1em 1em 1em 2em;
+  padding: 1em 1em 0em 2em;
   position: relative;
   margin-left: 0;
   p {
