Add bitcoin-explained-1.md, improve details.

--- a/assets/_sass/_base.scss
+++ b/assets/_sass/_base.scss
@@ -37,8 +37,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 { font-size: 1.5em; }
-h2 { font-size: 1.4em; }
-h3 { font-size: 1.2em; }
+h2 { font-size: 1.4em; border-bottom: 2px solid #d3d3d3; }
+h3 { font-size: 1.2em; border-bottom: 1px solid #d3d3d3; }
 h4 { font-size: 1em; }
 h5 { font-size: .8em; }
 h6 { font-size: .6em; }
@@ -175,6 +175,7 @@ em {
 * ========================================================================== */
 blockquote {
   border: 1px solid #ddd;
+  border-radius: 3px;
   padding: 1em 1em 0em 2em;
   position: relative;
   margin-left: 0;
