--- a/assets/_sass/_base.scss
+++ b/assets/_sass/_base.scss
@@ -15,14 +15,14 @@ body {
   width: 100%;
   height: 100%;
   background: #fdfdfd;
-  color: #222;
+  color: #24292e;
   font-weight: 400;
   -webkit-font-smoothing: antialiased;
 }
 
 article p {
-  margin-bottom: 15px;
-  line-height: 1.6;
+  margin-bottom: 16px;
+  line-height: 1.5;
 }
 
 h1, h2, h3, h4, h5, h6 {
