--- a/assets/_sass/_layout.scss
+++ b/assets/_sass/_layout.scss
@@ -269,7 +269,7 @@ main {
 }
 article {
   padding: 2em 1em;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: "Vollkorn",Georgia,Times,"Times New Roman",serif;
   img,
   embed,
   object,
@@ -294,8 +294,7 @@ article {
     height: auto;
     display: block;
     margin: 1em auto;
-    padding: .2em;
-    border: 3px solid #eee;
+    border: 0.3em solid #eee;
     background-color: #fff;
     border-radius: 8px;
   }
