--- a/assets/_sass/_base.scss
+++ b/assets/_sass/_base.scss
@@ -37,7 +37,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 { font-size: 1.5em; }
-h2 { font-size: 1.4em; border-bottom: 2px solid #eaecef; }
+h2 { font-size: 1.4em; border-bottom: 2px solid #eaecef; padding-top: 25px;}
 h3 { font-size: 1.2em; border-bottom: 1px solid #eaecef; }
 h4 { font-size: 1em; }
 h5 { font-size: .8em; }
