--- a/assets/_sass/_layout.scss
+++ b/assets/_sass/_layout.scss
@@ -294,7 +294,7 @@ article {
     height: auto;
     display: block;
     margin: 1em auto;
-    border: 0.3em solid #eee;
+    border: 0.3em solid #a1a3a6;
     background-color: #fff;
     border-radius: 8px;
   }
