--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,6 +8,8 @@
 
     <a href="https://github.com/{{ site.github_username}}">GitHub</a>
 
+    <a href="https://www.jianshu.com/u/daf68451f175"><strong>简书</strong></a>
+
     {% for my_page in site.pages %}
       {% if my_page.active %}
         <a href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
