--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,6 +18,8 @@ layout: default
 
     {{ content }}
 
+    {% include share.html %}
+
     {% if page.next.url %}
       <a class="link-to-post" href="{{ page.next.url | prepend: site.baseurl }}">
         <span class="link-to-post__next">&#10535; &nbsp;Next post</span>
