--- a/assets/_sass/_base.scss
+++ b/assets/_sass/_base.scss
@@ -303,3 +303,10 @@ a img {
 .post-title {
     text-align: center;
 }
+
+.share {
+  color: gray;
+  font-weight: 500;
+  font-size: 30px;
+  text-align: center;
+}
